# notion-calendar

./: .gitignore  Dockerfile  README.md  create_url.html  pyproject.toml
notion_calendar/: make_ics.py  notion_ics.py  webapp.py
