[tool.poetry]
name = "notion-calendar"
version = "0.1.0"
description = ""
authors = ["Dan Appel <dan.appel00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
notion = "^0.0.27"
icalendar = "^4.0.7"
Flask = "^1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
